--- a/index.html
+++ b/index.html
@@ -233,21 +233,120 @@
       <section class="resume-section" id="interests">
         <div class="resume-section-content">
           <h2 class="mb-5">Proyectos</h2>
-          <a href="https://mern-task-crc.netlify.app/" target="_blank">
-            <div class="card" style="width: 18rem">
-              <img
-                class="card-img-top"
-                src="assets/img/mern1.png"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
+          <div class="card-deck">
+            <!-- MERN -->
+            <a href="https://mern-task-crc.netlify.app/" target="_blank">
+              <div class="card" style="width: 18rem">
+                <img
+                  class="card-img-top"
+                  src="assets/img/mern1.png"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Proyecto Stack MERN</h5>
+                  <p class="card-text">
+                    Hooks + Context
+                  </p>
+                </div>
               </div>
-            </div>
-          </a>
+            </a>
+            <!-- RECETAS -->
+            <a href="https://bebidas-recetas-crc009.netlify.app/" target="_blank">
+              <div class="card" style="width: 18rem">
+                <img
+                  class="card-img-top"
+                  src="assets/img/recetas1.png"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Buscador de Recetas</h5>
+                  <p class="card-text">
+                    Buscador de recetas para bebidas. Hooks + Context
+                  </p>
+                </div>
+              </div>
+            </a>
+            <!-- IMAGENES -->
+            <a href="https://buscardor-img-crc008.netlify.app/" target="_blank">
+              <div class="card" style="width: 18rem">
+                <img
+                  class="card-img-top"
+                  src="assets/img/imagenes.png"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Buscador de Imágenes</h5>
+                  <p class="card-text">
+                    Buscador de imágenes para bebidas. Hooks + Context
+                  </p>
+                </div>
+              </div>
+            </a>
+            <!-- Entrenamientos -->
+            <a href="https://reservas-entrenamientos-crc001.netlify.app/" target="_blank">
+              <div class="card" style="width: 18rem">
+                <img
+                  class="card-img-top"
+                  src="assets/img/entrenamientos.png"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Reserva de entrenamientos</h5>
+                  <p class="card-text">
+                    Reserva de entrenamientos
+                  </p>
+                </div>
+              </div>
+            </a>
+            <!-- Presupuesto -->
+            <a href="https://presupuesto-semanal-crc002.netlify.app/" target="_blank">
+              <div class="card" style="width: 18rem">
+                <img
+                  class="card-img-top"
+                  src="assets/img/presupuesto.png"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Presupuesto semanal</h5>
+                  <p class="card-text">
+                    Presupuesto semanal
+                  </p>
+                </div>
+              </div>
+            </a>
+            <!-- Cotizador -->
+            <a href="https://criptomonedas-cotizador-crc006.netlify.app/" target="_blank">
+              <div class="card" style="width: 18rem">
+                <img
+                  class="card-img-top"
+                  src="assets/img/cotizador.png"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Cotizador criptomonedas</h5>
+                  <p class="card-text">
+                    Cotizador criptomonedas
+                  </p>
+                </div>
+              </div>
+            </a>
+            <!-- Seguros-->
+            <a href="https://cotizador-vehiculos-crc003.netlify.app/" target="_blank">
+              <div class="card" style="width: 18rem">
+                <img
+                  class="card-img-top"
+                  src="assets/img/seguros.png"
+                  alt="Card image cap"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Cotizador seguro</h5>
+                  <p class="card-text">
+                    Cotizador seguro
+                  </p>
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
       </section>
       <hr class="m-0" />
